--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -5,6 +5,8 @@
 }
 .logo {
   font-size: 30px;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
 }
 .navbar {
   display: flex;
@@ -16,7 +18,7 @@
 }
 .navlinks {
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   list-style: none;
   width: 75%;
 }
@@ -24,7 +26,19 @@
 .about {
   text-decoration: none;
   color: white;
-  font-size: 20px;
+
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
   padding: 10px 20px;
   margin: 0 10px;
+  cursor: pointer;
+}
+.aboutunselected {
+  font-size: 30px;
+}
+.active-class {
+  color: red;
+}
+
+.active {
+  color: green;
 }
