--- a/src/components/Home.module.css
+++ b/src/components/Home.module.css
@@ -17,14 +17,14 @@
 .h1 {
   display: flex;
   font-size: 20px;
-  font-family: "Courier New", Courier, monospace;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande";
   justify-content: center;
   align-items: center;
   margin-top: 15px;
 }
 .linkText {
   display: flex;
-  font-family: "Courier New", Courier, monospace;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande";
   font-size: 18px;
   justify-content: center;
   align-items: center;
