--- a/src/components/Home.module.css
+++ b/src/components/Home.module.css
@@ -8,6 +8,7 @@
   text-align: center;
   font-size: 20px;
   margin-top: 10px;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande";
 }
 .image {
   display: flex;
@@ -28,7 +29,7 @@
   font-size: 18px;
   justify-content: center;
   align-items: center;
-  margin-top: 50px;
+  margin-top: 44px;
 }
 .linkContainer {
   flex: 1;
