--- a/src/components/Home.module.css
+++ b/src/components/Home.module.css
@@ -1,5 +1,6 @@
 .container {
-  flex: 1;
+  display: flex;
+  flex-direction: column;
   margin-top: 20px;
   align-items: center;
   justify-content: center;
