--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -1,6 +1,6 @@
 .container {
   padding: 2px;
-  margin: 25px;
+  margin: 10px;
 }
 
 .imagecontainer {
@@ -13,25 +13,35 @@
   justify-content: center;
   align-items: center;
 
-  height: 250px;
+  width: 100%;
+  height: auto;
 }
 .h1 {
   text-align: center;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande";
-  font-size: 22px;
+  font-size: 26px;
   color: #00828c;
   margin: 20px;
 }
 .p {
   text-align: center;
-  font-size: 20px;
-  margin: 10px;
+  font-size: 22px;
+  font-weight: 400;
+  margin: 15px;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande";
+}
+.title {
+  text-align: center;
+  font-size: 24px;
+  font-weight: 700;
+  margin: 15px;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande";
 }
 .a {
   text-align: center;
-  font-size: 20px;
-  margin-top: 2px;
+  font-size: 23px;
+  font-weight: 500;
+  margin-bottom: 25px;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande";
 }
 .des {
