--- a/src/components/Skill.module.css
+++ b/src/components/Skill.module.css
@@ -2,7 +2,7 @@
   flex: 1;
   align-items: center;
   justify-content: center;
-  margin-top: 160px;
+  margin-top: 80px;
   margin-bottom: 80px;
 }
 .text {
@@ -10,7 +10,8 @@
   align-items: center;
   justify-content: center;
   margin-top: 20px;
-  font-size: 20px;
+  font-size: 27px;
+  font-weight: 700;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
 }
