--- a/src/components/Home.module.css
+++ b/src/components/Home.module.css
@@ -9,7 +9,7 @@
 .para {
   display: flex;
   text-align: center;
-  font-size: 20px;
+  font-size: 37px;
   /* margin-top: 10px; */
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande";
   align-items: center;
@@ -46,6 +46,9 @@ justify-content: center;
 @media (max-width: 800px) {
   .layoutOne {
     flex-direction: column;
+  }
+  .para{
+    font-size: 25px;
   }
 }
 .miniLayoutOne{
