--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -13,7 +13,7 @@
   align-items: center;
   justify-content: space-around;
   height: 75px;
-  background-color: #00828c;
+ /*  background-color: #00828c; */
   color: white;
 }
 .navlinks {
