--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -1,6 +1,8 @@
 .container {
   padding: 2px;
   margin: 10px;
+  /* background-color: #00828c; */
+ 
 }
 
 .imagecontainer {
@@ -8,8 +10,11 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  
 }
 .image {
+  display:flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 
@@ -51,4 +56,10 @@
   font-size: 20px;
   margin: 2px;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande";
+}
+.content{
+  display: flex;
+  align-items: center;
+  font-size: 18px;
+  color: #a6a5a5;
 }
