--- a/src/components/Home.module.css
+++ b/src/components/Home.module.css
@@ -12,9 +12,9 @@
   text-align: center;
   font-size: 34px;
   /* margin-top: 10px; */
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande";
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   align-items: center;
-  color: #484848;
+  color: #7b7b7b;
 }
 .image {
 
@@ -52,8 +52,9 @@ justify-content: center;
   }
   .para{
     font-size: 18px;
-    background-color: #003366;
-    color: white;
+    /* background-color: #003366; */
+    background-color: #03242b;
+    color: #7b7b7b;
     padding: 10px;
   }
 }
