--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -63,5 +63,5 @@
   align-items: center;
   font-size: 18px;
   color: #7b7b7b;
-  background-color: #03242b;
+  /* background-color: #03242b; */
 }
