--- a/src/components/Home.module.css
+++ b/src/components/Home.module.css
@@ -1,15 +1,15 @@
 .container {
   display: flex;
   flex-direction: column;
-  margin-top: 2px;
+  margin-top: 0px;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   padding-bottom: 35px;
   
 }
 .para {
   display: flex;
-  text-align: center;
+  text-align:justify;
   font-size: 34px;
   /* margin-top: 10px; */
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -51,11 +51,14 @@ justify-content: center;
     flex-direction: column;
   }
   .para{
-    font-size: 18px;
+    font-size: 22px;
     /* background-color: #003366; */
     background-color: #03242b;
     color: #7b7b7b;
-    padding: 10px;
+    margin-top: 0px;
+   padding-bottom: 40px;
+   padding-left: 10px;
+   padding-right: 10px;
   }
 }
 .miniLayoutOne{
