--- a/src/components/Home.module.css
+++ b/src/components/Home.module.css
@@ -9,7 +9,7 @@
 }
 .para {
   display: flex;
-  text-align:justify;
+  text-align:initial;
   font-size: 34px;
   /* margin-top: 10px; */
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -46,7 +46,7 @@ justify-content: center;
   
 
 }
-@media (max-width: 800px) {
+@media (max-width: 1100px) {
   .layoutOne {
     flex-direction: column;
   }
