--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -42,6 +42,9 @@
   font-weight: 700;
   margin: 15px;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande";
+  
+  text-decoration-line: underline;
+  text-decoration-color:#00828c;
 }
 .a {
   text-align: center;
@@ -64,4 +67,9 @@
   font-size: 18px;
   color: #7b7b7b;
   /* background-color: #03242b; */
+}
+@media (max-width: 1100px) {
+  .content{
+    font-size: 16px;
+  }
 }
