--- a/src/components/Home.module.css
+++ b/src/components/Home.module.css
@@ -2,10 +2,11 @@
   display: flex;
   flex-direction: column;
   margin-top: 0px;
-  align-items: center;
+  align-items: flex-start;
   justify-content: flex-start;
   padding-bottom: 35px;
-  
+  width: 300;
+  background-color: aqua;
 }
 .para {
   display: flex;
@@ -14,7 +15,7 @@
   /* margin-top: 10px; */
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   align-items: center;
-  color: #7b7b7b;
+ 
 }
 .image {
 
@@ -43,7 +44,10 @@ justify-content: center;
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  
+  padding-top: 60px;
+  padding-bottom: 60px;
+ 
+ 
 
 }
 @media (max-width: 1100px) {
@@ -53,7 +57,7 @@ justify-content: center;
   .para{
     font-size: 22px;
     /* background-color: #003366; */
-    background-color: #03242b;
+   
     color: #7b7b7b;
     margin-top: 0px;
    padding-bottom: 40px;
