--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -1,6 +1,6 @@
 .container {
   padding: 2px;
-  margin: 10px;
+  margin: 60px;
   /* background-color: #00828c; */
  
 }
@@ -8,7 +8,7 @@
 .imagecontainer {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
   
 }
@@ -33,7 +33,7 @@
   text-align: center;
   font-size: 22px;
   font-weight: 400;
-  margin: 15px;
+  margin: 2px;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande";
 }
 .title {
@@ -42,7 +42,8 @@
   text-align:'center';
   font-size: 24px;
   font-weight: 700;
-  margin: 5px;
+  margin: 2px;
+  
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande";
   
   
@@ -74,5 +75,9 @@
 @media (max-width: 1100px) {
   .content{
     font-size: 16px;
+  }
+  .container{
+    padding: 0px;
+    margin: 0px;
   }
 }
