--- a/src/components/SocialLinks/Social.module.css
+++ b/src/components/SocialLinks/Social.module.css
@@ -10,7 +10,7 @@
   display: flex;
   margin-top: 10px;
   flex-direction: row;
- 
+ background-color:  #262626;;
   justify-content: center;
 }
 .link {
