--- a/src/components/footer.module.css
+++ b/src/components/footer.module.css
@@ -1,12 +1,17 @@
 .container {
   display: flex;
+  flex-direction: row;
+justify-content:center ;
   align-items: flex-end;
-  justify-content: center;
-  margin-top: 20px;
+  margin-bottom: 0px;
+  background-color:white;;
 }
 .text {
   font-size: 13px;
+  margin-top:20px;
+  margin-bottom: 2px;
   font-family: Arial, Helvetica, sans-serif;
-  color: rgb(48, 42, 42);
+  color:#262626;
   align-items: flex-end;
+ 
 }
