bug fix and updation

--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -25,8 +25,8 @@
   }
 
 .langgit {
-  color: #58a6ff;
-  background-color: #3386fa26;
+  color: #262626;
+  background-color: #adadad63;
   text-decoration: none;
   border-radius: 20px;
   border: none;
