--- a/src/components/Home.module.css
+++ b/src/components/Home.module.css
@@ -69,6 +69,9 @@ justify-content: center;
   margin-right: 60px;
   
 }
+.title{
+  margin-left: 50px;
+}
 
 
 @media (max-width: 1100px) {
@@ -92,7 +95,9 @@ justify-content: center;
   .icon{
     margin-right: 10px;
   }
-  
+  .title{
+    margin-left: 0px;
+  }
   
 }
 .miniLayoutOne{
