--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -1,8 +1,9 @@
 .container {
   padding: 2px;
   margin: 60px;
- 
-  /* background-color: #00828c; */
+ padding-left: 100px;
+ padding-right: 100px;
+/* background-color: #00828c; */
  
 }
 
@@ -10,7 +11,7 @@
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
-  animation-duration: 1.5s;
+  animation-duration: 2s;
   animation-name: slidein; /*simple  animation implemented */
 }
 @keyframes slidein {
@@ -74,7 +75,7 @@
 }
 .title {
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   text-align:'center';
   font-size: 24px;
   font-weight: 700;
@@ -92,7 +93,7 @@ animation-name: slidein; /*simple  animation implemented */
     width: 300%;
      }
     to {
-     margin-left: 0%;
+     margin-left: 100%;
    width: 100%;
      }
   }
