--- a/src/components/Skill/Skill.module.css
+++ b/src/components/Skill/Skill.module.css
@@ -4,7 +4,7 @@
   justify-content: center;
   margin-top: 80px;
   margin-bottom: 80px;
-  animation-duration: .5s;
+  animation-duration: 1s;
 animation-name: slidein; /*simple  animation implemented */
 }
 
@@ -18,6 +18,27 @@ animation-name: slidein; /*simple  animation implemented */
    width: 100%;
      }
   }
+
+  .layoutOne{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
+  }
+  .layoutTwo{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
+  .typo{
+    padding: 6px;
+    font-size: 20px;
+  }
+  .child{
+    padding: 10px;
+  }
 .text {
   display: flex;
   align-items: center;
@@ -26,4 +47,30 @@ animation-name: slidein; /*simple  animation implemented */
   font-size: 27px;
   font-weight: 700;
   font-family:'Gudea', sans-serif;
+}
+@media (max-width: 1100px) {
+
+  .layoutOne{
+  
+    
+    padding-bottom: 10px;
+  }
+  .child{
+    padding: 4px;
+  }
+  .typo{
+    padding: 3px;
+    font-size: 14px;
+  }
+}
+@media (max-width: 400px) {
+  .child{
+    padding: 2px;
+    margin-left: 2px;
+  }
+  .typo{
+    padding: 2px;
+    
+    font-size: 12px;
+  }
 }
