--- a/src/components/Skill/Skill.module.css
+++ b/src/components/Skill/Skill.module.css
@@ -74,3 +74,14 @@ animation-name: slidein; /*simple  animation implemented */
     font-size: 12px;
   }
 }
+@media (max-width: 365px) {
+  .child{
+    padding: 1.2px;
+  
+  }
+  .typo{
+    padding: 1.2px;
+    
+    font-size: 10px;
+  }
+}
