--- a/src/components/Skill/Skill.module.css
+++ b/src/components/Skill/Skill.module.css
@@ -55,6 +55,11 @@ animation-name: slidein; /*simple  animation implemented */
     
     padding-bottom: 10px;
   }
+  .layoutTwo{
+  
+    
+    padding-bottom: 10px;
+  }
   .child{
     padding: 4px;
   }
