--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -77,6 +77,13 @@ justify-content: center;
   font-size: 18px;
   font-family:'Gudea', sans-serif ;
 }
+.titleText{
+  padding: 12px;
+  font-size: 28px;
+  font-family:'Gudea', sans-serif ;
+  color: #bfbfbf;
+  font-weight:bold,
+}
 
 
 @media (max-width: 1100px) {
@@ -102,6 +109,13 @@ justify-content: center;
   }
   .title{
     margin-left: 0px;
+  }
+  .titleText{
+    padding: 12px;
+  font-size: 22px;
+  font-family:'Gudea', sans-serif ;
+  color: #bfbfbf;
+  font-weight:bold,
   }
   
 }
