--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -46,6 +46,7 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
+  margin-top: 10px;
   
 }
 .image {
@@ -76,7 +77,7 @@
 }
 .title {
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   text-align:'center';
   font-size: 24px;
   font-weight: 500;
@@ -101,14 +102,12 @@
 
 
 .a {
-  text-align: center;
+  display: flex;
+  justify-content: flex-start;
   font-size: 23px;
   font-weight: 500;
-  margin-bottom: 18px;
   margin-top: 10px;
   font-family:'Gudea', sans-serif;
- /* // animation-duration: 1.3s;
-//animation-name: slidein; */ /*simple  animation implemented */
 }
 @keyframes slidein {
   from {
