project page content correuptions lang box style fix

--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -25,14 +25,14 @@
      }
   }
 
-.langgit {
+.lang_box {
   color: #262626;
   background-color: #adadad63;
   text-decoration: none;
   border-radius: 20px;
   border: none;
   font-size: 14px;
-  padding: 5px;
+  padding: 10px;
   margin-right: 10px;
  
 }
